--- a/src/receita02/style.css
+++ b/src/receita02/style.css
@@ -25,3 +25,16 @@ a.meu-link:active{
     color: orange;
     text-decoration: none;
 }
+
+div.poeta-container {
+  display: flex;         
+  align-items: center;    
+  gap: 10px;              
+}
+
+img.poeta {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;     
+  object-fit: cover;
+}
